// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index Alsos should render multiple correctly 1`] = `
<IndexAlsos
  offScreenText="Karin bayani"
>
  <IndexAlsosUl>
    <IndexAlsosLi
      dir="ltr"
      mediaIndicator={
        <MediaIndicator
          datetime={null}
          duration={null}
          indexAlsos={true}
          service="news"
          topStory={false}
          type="video"
        />
      }
      mediaType="Bidiyo"
      script={
        Object {
          "atlas": Object {
            "groupA": Object {
              "fontSize": "78",
              "lineHeight": "84",
            },
            "groupB": Object {
              "fontSize": "96",
              "lineHeight": "104",
            },
            "groupD": Object {
              "fontSize": "140",
              "lineHeight": "148",
            },
          },
          "bodyCopy": Object {
            "groupA": Object {
              "fontSize": "15",
              "lineHeight": "20",
            },
            "groupB": Object {
              "fontSize": "16",
              "lineHeight": "22",
            },
            "groupD": Object {
              "fontSize": "16",
              "lineHeight": "22",
            },
          },
          "brevier": Object {
            "groupA": Object {
              "fontSize": "14",
              "lineHeight": "18",
            },
            "groupB": Object {
              "fontSize": "14",
              "lineHeight": "18",
            },
            "groupD": Object {
              "fontSize": "13",
              "lineHeight": "16",
            },
          },
          "canon": Object {
            "groupA": Object {
              "fontSize": "28",
              "lineHeight": "32",
            },
            "groupB": Object {
              "fontSize": "32",
              "lineHeight": "36",
            },
            "groupD": Object {
              "fontSize": "44",
              "lineHeight": "48",
            },
          },
          "doublePica": Object {
            "groupA": Object {
              "fontSize": "18",
              "lineHeight": "22",
            },
            "groupB": Object {
              "fontSize": "20",
              "lineHeight": "24",
            },
            "groupD": Object {
              "fontSize": "24",
              "lineHeight": "28",
            },
          },
          "elephant": Object {
            "groupA": Object {
              "fontSize": "60",
              "lineHeight": "64",
            },
            "groupB": Object {
              "fontSize": "78",
              "lineHeight": "84",
            },
            "groupD": Object {
              "fontSize": "116",
              "lineHeight": "124",
            },
          },
          "foolscap": Object {
            "groupA": Object {
              "fontSize": "32",
              "lineHeight": "36",
            },
            "groupB": Object {
              "fontSize": "40",
              "lineHeight": "44",
            },
            "groupD": Object {
              "fontSize": "56",
              "lineHeight": "60",
            },
          },
          "greatPrimer": Object {
            "groupA": Object {
              "fontSize": "18",
              "lineHeight": "22",
            },
            "groupB": Object {
              "fontSize": "18",
              "lineHeight": "22",
            },
            "groupD": Object {
              "fontSize": "20",
              "lineHeight": "24",
            },
          },
          "imperial": Object {
            "groupA": Object {
              "fontSize": "50",
              "lineHeight": "54",
            },
            "groupB": Object {
              "fontSize": "64",
              "lineHeight": "72",
            },
            "groupD": Object {
              "fontSize": "96",
              "lineHeight": "104",
            },
          },
          "longPrimer": Object {
            "groupA": Object {
              "fontSize": "15",
              "lineHeight": "18",
            },
            "groupB": Object {
              "fontSize": "15",
              "lineHeight": "18",
            },
            "groupD": Object {
              "fontSize": "14",
              "lineHeight": "18",
            },
          },
          "minion": Object {
            "groupA": Object {
              "fontSize": "12",
              "lineHeight": "16",
            },
            "groupB": Object {
              "fontSize": "12",
              "lineHeight": "16",
            },
            "groupD": Object {
              "fontSize": "12",
              "lineHeight": "16",
            },
          },
          "paragon": Object {
            "groupA": Object {
              "fontSize": "20",
              "lineHeight": "24",
            },
            "groupB": Object {
              "fontSize": "22",
              "lineHeight": "26",
            },
            "groupD": Object {
              "fontSize": "28",
              "lineHeight": "32",
            },
          },
          "pica": Object {
            "groupA": Object {
              "fontSize": "15",
              "lineHeight": "20",
            },
            "groupB": Object {
              "fontSize": "16",
              "lineHeight": "20",
            },
            "groupD": Object {
              "fontSize": "16",
              "lineHeight": "20",
            },
          },
          "royal": Object {
            "groupA": Object {
              "fontSize": "40",
              "lineHeight": "44",
            },
            "groupB": Object {
              "fontSize": "52",
              "lineHeight": "60",
            },
            "groupD": Object {
              "fontSize": "76",
              "lineHeight": "84",
            },
          },
          "trafalgar": Object {
            "groupA": Object {
              "fontSize": "20",
              "lineHeight": "24",
            },
            "groupB": Object {
              "fontSize": "24",
              "lineHeight": "28",
            },
            "groupD": Object {
              "fontSize": "32",
              "lineHeight": "36",
            },
          },
        }
      }
      service="news"
      url="/hausa/labarai-48916590"
    >
      APC ba ta isa ta kore ni ba – Buba Galadima
    </IndexAlsosLi>
    <IndexAlsosLi
      dir="ltr"
      mediaIndicator={null}
      script={
        Object {
          "atlas": Object {
            "groupA": Object {
              "fontSize": "78",
              "lineHeight": "84",
            },
            "groupB": Object {
              "fontSize": "96",
              "lineHeight": "104",
            },
            "groupD": Object {
              "fontSize": "140",
              "lineHeight": "148",
            },
          },
          "bodyCopy": Object {
            "groupA": Object {
              "fontSize": "15",
              "lineHeight": "20",
            },
            "groupB": Object {
              "fontSize": "16",
              "lineHeight": "22",
            },
            "groupD": Object {
              "fontSize": "16",
              "lineHeight": "22",
            },
          },
          "brevier": Object {
            "groupA": Object {
              "fontSize": "14",
              "lineHeight": "18",
            },
            "groupB": Object {
              "fontSize": "14",
              "lineHeight": "18",
            },
            "groupD": Object {
              "fontSize": "13",
              "lineHeight": "16",
            },
          },
          "canon": Object {
            "groupA": Object {
              "fontSize": "28",
              "lineHeight": "32",
            },
            "groupB": Object {
              "fontSize": "32",
              "lineHeight": "36",
            },
            "groupD": Object {
              "fontSize": "44",
              "lineHeight": "48",
            },
          },
          "doublePica": Object {
            "groupA": Object {
              "fontSize": "18",
              "lineHeight": "22",
            },
            "groupB": Object {
              "fontSize": "20",
              "lineHeight": "24",
            },
            "groupD": Object {
              "fontSize": "24",
              "lineHeight": "28",
            },
          },
          "elephant": Object {
            "groupA": Object {
              "fontSize": "60",
              "lineHeight": "64",
            },
            "groupB": Object {
              "fontSize": "78",
              "lineHeight": "84",
            },
            "groupD": Object {
              "fontSize": "116",
              "lineHeight": "124",
            },
          },
          "foolscap": Object {
            "groupA": Object {
              "fontSize": "32",
              "lineHeight": "36",
            },
            "groupB": Object {
              "fontSize": "40",
              "lineHeight": "44",
            },
            "groupD": Object {
              "fontSize": "56",
              "lineHeight": "60",
            },
          },
          "greatPrimer": Object {
            "groupA": Object {
              "fontSize": "18",
              "lineHeight": "22",
            },
            "groupB": Object {
              "fontSize": "18",
              "lineHeight": "22",
            },
            "groupD": Object {
              "fontSize": "20",
              "lineHeight": "24",
            },
          },
          "imperial": Object {
            "groupA": Object {
              "fontSize": "50",
              "lineHeight": "54",
            },
            "groupB": Object {
              "fontSize": "64",
              "lineHeight": "72",
            },
            "groupD": Object {
              "fontSize": "96",
              "lineHeight": "104",
            },
          },
          "longPrimer": Object {
            "groupA": Object {
              "fontSize": "15",
              "lineHeight": "18",
            },
            "groupB": Object {
              "fontSize": "15",
              "lineHeight": "18",
            },
            "groupD": Object {
              "fontSize": "14",
              "lineHeight": "18",
            },
          },
          "minion": Object {
            "groupA": Object {
              "fontSize": "12",
              "lineHeight": "16",
            },
            "groupB": Object {
              "fontSize": "12",
              "lineHeight": "16",
            },
            "groupD": Object {
              "fontSize": "12",
              "lineHeight": "16",
            },
          },
          "paragon": Object {
            "groupA": Object {
              "fontSize": "20",
              "lineHeight": "24",
            },
            "groupB": Object {
              "fontSize": "22",
              "lineHeight": "26",
            },
            "groupD": Object {
              "fontSize": "28",
              "lineHeight": "32",
            },
          },
          "pica": Object {
            "groupA": Object {
              "fontSize": "15",
              "lineHeight": "20",
            },
            "groupB": Object {
              "fontSize": "16",
              "lineHeight": "20",
            },
            "groupD": Object {
              "fontSize": "16",
              "lineHeight": "20",
            },
          },
          "royal": Object {
            "groupA": Object {
              "fontSize": "40",
              "lineHeight": "44",
            },
            "groupB": Object {
              "fontSize": "52",
              "lineHeight": "60",
            },
            "groupD": Object {
              "fontSize": "76",
              "lineHeight": "84",
            },
          },
          "trafalgar": Object {
            "groupA": Object {
              "fontSize": "20",
              "lineHeight": "24",
            },
            "groupB": Object {
              "fontSize": "24",
              "lineHeight": "28",
            },
            "groupD": Object {
              "fontSize": "32",
              "lineHeight": "36",
            },
          },
        }
      }
      service="news"
      url="/hausa/labarai-42837051"
    >
      Yaushe Obasanjo ya fara yi wa shugabannin kasa baki?
    </IndexAlsosLi>
  </IndexAlsosUl>
</IndexAlsos>
`;

exports[`Index Alsos should render one correctly 1`] = `
<IndexAlsos
  offScreenText="Karin bayani"
>
  <React.Fragment>
    <IndexAlso
      dir="ltr"
      mediaIndicator={
        <MediaIndicator
          datetime={null}
          duration={null}
          indexAlsos={true}
          service="news"
          topStory={false}
          type="video"
        />
      }
      mediaType="Bidiyo"
      script={
        Object {
          "atlas": Object {
            "groupA": Object {
              "fontSize": "78",
              "lineHeight": "84",
            },
            "groupB": Object {
              "fontSize": "96",
              "lineHeight": "104",
            },
            "groupD": Object {
              "fontSize": "140",
              "lineHeight": "148",
            },
          },
          "bodyCopy": Object {
            "groupA": Object {
              "fontSize": "15",
              "lineHeight": "20",
            },
            "groupB": Object {
              "fontSize": "16",
              "lineHeight": "22",
            },
            "groupD": Object {
              "fontSize": "16",
              "lineHeight": "22",
            },
          },
          "brevier": Object {
            "groupA": Object {
              "fontSize": "14",
              "lineHeight": "18",
            },
            "groupB": Object {
              "fontSize": "14",
              "lineHeight": "18",
            },
            "groupD": Object {
              "fontSize": "13",
              "lineHeight": "16",
            },
          },
          "canon": Object {
            "groupA": Object {
              "fontSize": "28",
              "lineHeight": "32",
            },
            "groupB": Object {
              "fontSize": "32",
              "lineHeight": "36",
            },
            "groupD": Object {
              "fontSize": "44",
              "lineHeight": "48",
            },
          },
          "doublePica": Object {
            "groupA": Object {
              "fontSize": "18",
              "lineHeight": "22",
            },
            "groupB": Object {
              "fontSize": "20",
              "lineHeight": "24",
            },
            "groupD": Object {
              "fontSize": "24",
              "lineHeight": "28",
            },
          },
          "elephant": Object {
            "groupA": Object {
              "fontSize": "60",
              "lineHeight": "64",
            },
            "groupB": Object {
              "fontSize": "78",
              "lineHeight": "84",
            },
            "groupD": Object {
              "fontSize": "116",
              "lineHeight": "124",
            },
          },
          "foolscap": Object {
            "groupA": Object {
              "fontSize": "32",
              "lineHeight": "36",
            },
            "groupB": Object {
              "fontSize": "40",
              "lineHeight": "44",
            },
            "groupD": Object {
              "fontSize": "56",
              "lineHeight": "60",
            },
          },
          "greatPrimer": Object {
            "groupA": Object {
              "fontSize": "18",
              "lineHeight": "22",
            },
            "groupB": Object {
              "fontSize": "18",
              "lineHeight": "22",
            },
            "groupD": Object {
              "fontSize": "20",
              "lineHeight": "24",
            },
          },
          "imperial": Object {
            "groupA": Object {
              "fontSize": "50",
              "lineHeight": "54",
            },
            "groupB": Object {
              "fontSize": "64",
              "lineHeight": "72",
            },
            "groupD": Object {
              "fontSize": "96",
              "lineHeight": "104",
            },
          },
          "longPrimer": Object {
            "groupA": Object {
              "fontSize": "15",
              "lineHeight": "18",
            },
            "groupB": Object {
              "fontSize": "15",
              "lineHeight": "18",
            },
            "groupD": Object {
              "fontSize": "14",
              "lineHeight": "18",
            },
          },
          "minion": Object {
            "groupA": Object {
              "fontSize": "12",
              "lineHeight": "16",
            },
            "groupB": Object {
              "fontSize": "12",
              "lineHeight": "16",
            },
            "groupD": Object {
              "fontSize": "12",
              "lineHeight": "16",
            },
          },
          "paragon": Object {
            "groupA": Object {
              "fontSize": "20",
              "lineHeight": "24",
            },
            "groupB": Object {
              "fontSize": "22",
              "lineHeight": "26",
            },
            "groupD": Object {
              "fontSize": "28",
              "lineHeight": "32",
            },
          },
          "pica": Object {
            "groupA": Object {
              "fontSize": "15",
              "lineHeight": "20",
            },
            "groupB": Object {
              "fontSize": "16",
              "lineHeight": "20",
            },
            "groupD": Object {
              "fontSize": "16",
              "lineHeight": "20",
            },
          },
          "royal": Object {
            "groupA": Object {
              "fontSize": "40",
              "lineHeight": "44",
            },
            "groupB": Object {
              "fontSize": "52",
              "lineHeight": "60",
            },
            "groupD": Object {
              "fontSize": "76",
              "lineHeight": "84",
            },
          },
          "trafalgar": Object {
            "groupA": Object {
              "fontSize": "20",
              "lineHeight": "24",
            },
            "groupB": Object {
              "fontSize": "24",
              "lineHeight": "28",
            },
            "groupD": Object {
              "fontSize": "32",
              "lineHeight": "36",
            },
          },
        }
      }
      service="news"
      url="/hausa/labarai-48916590"
    >
      APC ba ta isa ta kore ni ba – Buba Galadima
    </IndexAlso>
  </React.Fragment>
</IndexAlsos>
`;
